--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native-stack": "^6.5.0",
     "bcryptjs": "^2.4.3",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
@@ -20,10 +23,10 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
-    "sequelize": "^6.17.0",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-safe-area-context": "3.3.2"
+    "react-native-web": "0.17.1",
+    "sequelize": "^6.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
